--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,20 @@
 ---
 ---
-
+//Stylesheet for youtube videos
+.youtube-wrapper {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+}
+.youtube-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
 
 // Lightmode colors
 $primary: {{ site.colors.primary | default: '#EC255A' }};
